--- a/index.html
+++ b/index.html
@@ -9,34 +9,5 @@
   <body>
     <canvas id="canvas"></canvas>
   </body>
-  <script>
-    const height = 300,
-      width = 400;
-    const canvas = document.getElementById("canvas");
-    canvas.width = width;
-    canvas.height = height;
-    const ctx = canvas.getContext("2d");
-    console.log(ctx, "ctx");
-    // const gradient = ctx.createLinearGradient(0, 0, width, 0);
-    // gradient.addColorStop(0, "rgb(255,0,0)");
-    // gradient.addColorStop(0.5, "rgb(0,255,0)");
-    // gradient.addColorStop(1, "rgb(0,0,255)");
-    // console.log(gradient, "gradient");
-    // ctx.fillStyle = gradient;
-    // ctx.fillRect(0, 0, width, height);
-    
-    // const radialGradient = ctx.createRadialGradient(
-    //   width / 2,
-    //   height / 2,
-    //   10,
-    //   width / 2,
-    //   height / 2,
-    //   height
-    // );
-    // radialGradient.addColorStop(0, "rgb(255,0,0)");
-    // radialGradient.addColorStop(0.5, "rgb(0,255,0)");
-    // radialGradient.addColorStop(1, "rgb(0,0,255)");
-    // ctx.fillStyle = radialGradient;
-    // ctx.fillRect(0, 0, width, height);
-  </script>
+  <script src="./index.ts"></script>
 </html>
