chore: 实现 scene 类

--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
   <body>
     <canvas id="canvas"></canvas>
   </body>
-  <script src="./index.ts" type="module"></script>
+  <script src="./views/index.ts" type="module"></script>
 </html>
